# matching-engine

./: README.md
engine/: Cargo.toml
engine/benches/: order_book.rs
engine/src/: client.rs  client_order_manager.rs  server.rs
engine/src/algos/: art_book.rs  book.rs  fifo.rs  optimised_fifo.rs
engine/src/rpc/: me_state_machine.rs  rpc_server.rs
engine/tests/: watch.rs
raft/: Cargo.toml
raft/examples/: failover_latency_evaluation.rs
raft/src/: raft.rs  rpc_server.rs  shutdown.rs  storage.rs
raft/tests/: tonic.rs
raft/tests/raft/: raft.rs  single_node_can_fail_with_cluster_of_three.rs  start_command_works.rs
