[package]
name = "engine"
version = "0.1.0"
authors = ["GelleÌrt Peresztegi-Nagy <gp454@cam.ac.uk>"]
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
prost = "0.13.5"
tokio = { version = "1.44.1", features = ["full"] }
tokio-stream = { version = "0.1.2", features = ["sync"] }
tonic = "0.13.0"
raft = { path = "../raft" }
tracing = "0.1.22"
tracing-subscriber = "0.3.19"
tracing-futures = "0.2.4"
futures = "0.3.8"
async-trait = "0.1.42"
rand = "0.9.0"
adaptive-radix-tree = { git = "https://github.com/pgellert/adaptive-radix-tree", branch = "main" }

[build-dependencies]
tonic-build = "0.13.0"

[dev-dependencies]
criterion = "0.5"

[[bench]]
name = "order_book"
harness = false

[[bin]]
name = "me_server"
path = "src/server.rs"

[[bin]]
name = "me_client"
path = "src/client.rs"
