[package]
name = "raft"
version = "0.1.0"
authors = ["Gellért Peresztegi-Nagy <gp454@cam.ac.uk>"]
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
prost = "0.13.5"
tokio = { version = "1.44.1", features = ["full"] }
tonic = "0.13.0"
rand = "0.9.0"
tracing = "0.1.22"
tracing-subscriber = "0.3.19"
tracing-futures = "0.2.4"
futures = "0.3.8"
itertools = "0.14.0"
async-trait = "0.1.42"

[build-dependencies]
tonic-build = "0.13.0"


[[example]]
name = "failover"
path = "examples/failover_latency_evaluation.rs"
